option('with-docs', type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('with-man', type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('with-pcre', type : 'combo', choices : ['system', 'internal'], value : 'system')
option('enable-libmount', type : 'combo', choices : ['auto', 'yes', 'no'], value : 'yes')
option('enable-dtrace', type : 'boolean', value : false,
  description : 'include tracing support for dtrace')
option('enable-systemtap', type : 'boolean', value : false,
  description : 'include tracing support for systemtap')
option('tapset-install-dir', type : 'string', value : '',
  description : 'path where systemtap tapsets are installed')
